@@ -1,6 +1,6 @@
 package net.loveruby.cflat.asm;
 
-abstract public class AsmEntity {
+abstract public class AsmOperand {
     abstract public String toString();
 
     public boolean isMemoryReference() {
