@@ -1,7 +1,7 @@
 package net.loveruby.cflat.asm;
 
-public class ImmediateValue extends AsmEntity {
-    protected AsmEntity entity;
+public class ImmediateValue extends AsmOperand {
+    protected AsmOperand entity;
 
     public ImmediateValue(long n) {
         this(new IntegerLiteral(n));
@@ -11,11 +11,11 @@ public class ImmediateValue extends AsmEntity {
         this(new Symbol(label));
     }
 
-    public ImmediateValue(AsmEntity entity) {
+    public ImmediateValue(AsmOperand entity) {
         this.entity = entity;
     }
 
-    public AsmEntity entity() {
+    public AsmOperand entity() {
         return this.entity;
     }
 
