@@ -1,4 +1,4 @@
 package net.loveruby.cflat.asm;
 
-abstract public class Literal extends AsmEntity {
+abstract public class Literal extends AsmOperand {
 }
