@@ -1,6 +1,6 @@
 package net.loveruby.cflat.asm;
 
-abstract public class MemoryReference extends AsmEntity {
+abstract public class MemoryReference extends AsmOperand {
     public boolean isMemoryReference() {
         return true;
     }
