@@ -1,3 +1,9 @@
+Tue Sep 16 02:49:21 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/asm/AsmEntity.java -> AsmOperand.java
+
+	* net/loveruby/cflat/*/*.java: AsmEntity -> AsmOperand.
+
 Tue Sep 16 02:37:46 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/asm/Address.java -> MemoryReference.java
